# sphragis

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
demo/: app.py
examples/: open_minimal.dclg.xml  restricted_case.dclg.xml
src/sphragis/: __init__.py  cli.py  model.py  parser.py  policy.py
src/sphragis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_policy.py
