[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sphragis"
version = "0.0.1"
description = "Deterministic evaluation of DocLang governance and compliance metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
validate = ["doclang"]

[project.scripts]
sphragis = "sphragis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
