[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sphragis"
version = "0.0.1"
description = "Deterministic evaluation of DocLang governance and compliance metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "beachcities", email = "166102488+beachcities@users.noreply.github.com" },
]
keywords = ["doclang", "data-governance", "ai-governance", "provenance", "policy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = []

[project.optional-dependencies]
validate = ["doclang"]

[project.urls]
Repository = "https://github.com/beachcities/sphragis"
Issues = "https://github.com/beachcities/sphragis/issues"

[project.scripts]
sphragis = "sphragis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
